drone: reenable rust on debian

--- a/.drone.yml
+++ b/.drone.yml
@@ -21,10 +21,10 @@ steps:
     - LDFLAGS=-L/usr/local/lib CFLAGS=-I/usr/local/include python3 setup.py sdist build install
     - env LD_LIBRARY_PATH=/usr/local/lib ./notcurses-pydemo > /dev/null
     - env LD_LIBRARY_PATH=/usr/local/lib ./ncdirect-pydemo > /dev/null
-    #- cd ../rust
-    #- rustc --version
-    #- cargo build
-    #- cargo t_all
+    - cd ../rust
+    - rustc --version
+    - cargo build
+    - cargo t_all
 ---
 kind: pipeline
 type: docker
