--- a/.github/workflows/windows_test.yml
+++ b/.github/workflows/windows_test.yml
@@ -35,6 +35,7 @@ jobs:
             mingw-w64-ucrt-x86_64-libunistring
             mingw-w64-ucrt-x86_64-ncurses
             mingw-w64-ucrt-x86_64-toolchain
+            mingw-w64-ucrt-x86_64-rust
 
       - uses: actions/checkout@v2
 
@@ -75,20 +76,19 @@ jobs:
           cd build
           make install
 
-          #- name: python wrappers
-          #run: |
-          #python3 -m pip install --upgrade pip
-          #pip install pypandoc
-          #cd cffi
-          #python3 setup.py sdist build
-          #python3 setup.py install
-          #notcurses-pydemo > /dev/null
-          #ncdirect-pydemo > /dev/null
+      - name: python wrappers
+        run: |
+          python3 -m pip install --upgrade pip
+          pip install pypandoc
+          cd cffi
+          python3 setup.py sdist build
+          python3 setup.py install
+          notcurses-pydemo > /dev/null
+          ncdirect-pydemo > /dev/null
 
-          #- name: rust wrappers
-          #mingw-w64-ucrt-x86_64-rust
-          #run: |
-          #cd rust
-          #rustc --version
-          #cargo build
-          #cargo t_all
+      - name: rust wrappers
+        run: |
+          cd rust
+          rustc --version
+          cargo build
+          cargo t_all
