leave rust builds enabled, but disable rust testing

--- a/.drone.yml
+++ b/.drone.yml
@@ -24,7 +24,7 @@ steps:
     - cd ../rust
     - rustc --version
     - cargo build
-    - cargo t_all
+      #- cargo t_all
 ---
 kind: pipeline
 type: docker
