--- a/.github/workflows/windows_test.yml
+++ b/.github/workflows/windows_test.yml
@@ -90,5 +90,5 @@ jobs:
         run: |
           cd rust
           rustc --version
-          cargo build
+          #cargo build
           #cargo t_all
