--- a/.drone.yml
+++ b/.drone.yml
@@ -5,7 +5,7 @@ name: debian-unstable
 
 steps:
 - name: debian-build
-  image: dankamongmen/unstable_builder:2021-07-02a
+  image: dankamongmen/unstable_builder:2021-08-19a
   commands:
     - export LANG=en_US.UTF-8
     - export TERM=xterm
@@ -56,11 +56,11 @@ steps:
 ---
 kind: pipeline
 type: docker
-name: ubuntu-hirsute
+name: ubuntu-impish
 
 steps:
 - name: ubuntu-build
-  image: dankamongmen/hirsute:2021-07-02a
+  image: dankamongmen/impish:2021-08-19a
   commands:
     - export LANG=es_ES.UTF-8
     - export TERM=xterm
