CMake: add USE_GPM option #1405

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,6 +24,7 @@ cmake_dependent_option(
   "${BUILD_TESTING}" OFF
 )
 option(USE_DOXYGEN "Build HTML cross reference with doxygen" OFF)
+option(USE_GPM "Enable libgpm console mouse support" OFF)
 option(USE_PANDOC "Build man pages and HTML reference with pandoc" ON)
 option(USE_POC "Build small, uninstalled proof-of-concept binaries" ON)
 option(USE_QRCODEGEN "Enable libqrcodegen QR code support" OFF)
@@ -145,6 +146,16 @@ endif()
 find_library(unistring unistring REQUIRED)
 set_property(GLOBAL APPEND PROPERTY PACKAGES_FOUND libunistring)
 set_package_properties(libunistring PROPERTIES TYPE REQUIRED)
+if(${USE_GPM}) # no pkgconfig from gpm
+unset(HAVE_GPM_H CACHE)
+check_include_file("gpm.h" HAVE_GPM_H)
+if(NOT "${HAVE_GPM_H}")
+  message(FATAL_ERROR "Couldn't find gpm.h from libgpm")
+endif()
+find_library(gpm gpm REQUIRED)
+set_property(GLOBAL APPEND PROPERTY PACKAGES_FOUND libgpm)
+set_package_properties(libgpm PROPERTIES TYPE REQUIRED)
+endif()
 unset(HAVE_QRCODEGEN_H CACHE)
 if("${USE_QRCODEGEN}")
 check_include_file("qrcodegen/qrcodegen.h" HAVE_QRCODEGEN_H)
